deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata: { name: beyla }
spec:
  type: ClusterIP
  clusterIP: None
  selector: { app.kubernetes.io/name: beyla }
  ports:
    - { name: metrics, port: 8080, targetPort: metrics }
